# parquet-sink-dedicated-exec-repro

./: Cargo.toml  README.md  build.rs  rustfmt.toml
src/: dedicated_executor.rs  localstack.rs  main.rs
