[package]
name = "parquet-sink-dedicated-exec-repro"
version = "0.1.0"
edition = "2021"
default-run = "parquet-sink-dedicated-exec-repro"

[lib]
name = "dedicated_executor"
path = "src/dedicated_executor.rs"

[dependencies]
arrow = "54.2.0"
arrow-flight = { version = "54.2.0", features = ["flight-sql-experimental"] }
arrow-schema = "54.2.0"
async-trait = "0.1.86"
bytes = "1.10.0"
datafusion = "45.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
object_store = { version = "0.11.2", features = ["aws"] }
parquet = "54.2.0"
prost = "0.13.5"
rand = "0.9.0"
testcontainers = "0.23.2"
testcontainers-modules = { version = "0.11.6", features = ["localstack"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"

[features]
default = ["dedicated-executor"]
# Enables the dedicated executor
dedicated-executor = []
